--- a/spell-crafting.html
+++ b/spell-crafting.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spell Crafting</title>
+    <link rel="stylesheet" href="styles/spell-crafting.css">
     <link rel="stylesheet" href="styles/header.css">
 
 </head>
@@ -19,5 +20,9 @@
             <li><a href="battle.html">Battle</a></li>
         </nav>
     </header>
+    <main>
+        <h1>Spell Creation</h1>
+        <input type="dropdown" id="target-type" placeholder="Select Target type">
+    </main>
 </body>
 </html>
